# liquid-fpm

./: .gitignore  README.md  README.txt  bootstrap.sh  config.h.in  configure.ac  configure.in  fpmtest.c  makefile.in  q32_atan2_benchmark.h  q32_div.inv.newton.c  q32_div.port.c  q32_dotprod.port.c  q32_mul.intelmac.s  q32_mul.port.c  q32_mul.ppc.s  q32_mul.x86.s  qtype.mul.intelmac.s  qtype.mul.ppc.s  qtype.s.gen.c  qtype_mul.ppc.s.c  sqrt_test.c
autotest/: atan2_cordic_autotest.h  autotest.c  autotest.h  autotest.mk  autotestgen.c  cqtype_add_autotest.h  cqtype_mul_autotest.h  cqtype_trig_autotest.h  exp2_shiftadd_autotest.h  inv_newton_autotest.h  libversion_autotest.h  log2_shiftadd_autotest.h  qtype_add_autotest.h  qtype_constants_autotest.h  qtype_div_autotest.h  qtype_div_inv_newton_autotest.h  qtype_mul_autotest.h  qtype_sub_autotest.h  sinc_autotest.h  sincos_cordic_autotest.h  sinhcosh_cordic_autotest.h  sqrt_newton_autotest.h
bench/: atan2_benchmark.h  bench.c  benchmark_include.h  benchmarkgen.c  log2_benchmark.h  q32_log2_benchmark.h  q32_log2_shiftadd_benchmark.h  q32_sin_benchmark.h  q32_sqrt_benchmark.h  q32_sqrt_newton_benchmark.h  sin_benchmark.h  sqrt_benchmark.h
depreciated/: cq32.c  log2_fraction_table_32.c
doc/: .gitignore  liquid-fpm.tex  makefile
doc/listings/: q32.example.c
doc/sections/: qtype.arithmetic.tex
genlib/: .gitignore  qtype.mul.x86.s  qtype.mul.x86_64.s  qtype.s.gen.c
gentab/: .gitignore  gentab.atan2.pwpolyfit.c  gentab.constants.c  gentab.logexp.polyfit.c  gentab.logexp.shiftadd.c  gentab.logsin.c  gentab.math.transcendentals.c  gentab.sincos.cordic.c  gentab.sincos.pwpoly.c  gentab.sinhcosh.cordic.c  gentab_math.c  gentab_q32.c  gentab_q32.cordic.c  gentab_q32.shiftadd.c  gentab_sin_table.c
include/: liquidfpm.h  liquidfpm.internal.h
sandbox/: atan2.cordic.test.c  exp.shiftadd.test.c  log.shiftadd.test.c  loglogbesseli0.pwpoly.test.c  loglogbesseli0_test.m  makefile  q32_atan2.cordic.test.c  q32_exp.shiftadd.test.c  q32_log.shiftadd.test.c  q32_loglogbesseli0.pwpoly.test.c  q32_sincos.cordic.test.c  q32_sinhcosh.cordic.test.c  sincos.cordic.test.c  sinhcosh.cordic.test.c
scripts/: liquidfpm_atan_compact.m  liquidfpm_atanlog2.m  piecewise_poly_fit.m
src/: atan.cordic.c  atan.pwpolyfit.c  atan_table_q32_32_8.c  clz.c  complex.c  complex_arithmetic.c  complex_conversion.c  complex_log.c  complex_trig.c  cordic.tab.c  cq32.c  exp.port.c  exp2.polyfit.c  exp2.shiftadd.c  fpm.h  fpm_internal.h  inv.newton.c  kaiser.c  libliquidfpm.c  libmad_fixed.c  log.c  log.port.c  log2.polyfit.c  log2.shiftadd.c  log2_fraction_table_256.c  log2_fraction_table_32.c  loglogbesseli0.pwpoly.c  math.transcendentals.c  msb_index.c  qfloat.c  qtype_div.inv.newton.c  qtype_div.port.c  qtype_dotprod.port.c  qtype_mul.port.c  ratio.c  shiftadd.tab.c  sin_table_q32_256.c  sincos.cordic.c  sincos.pwpolyfit.c  sinhcosh.cordic.c  (+5 more)
testing/: liquidfpm_atan_pwpoly_test.m  liquidfpm_sin.m  piecewise_poly_fit.m
