dnl 
dnl Liquid fixed-point math library configure
dnl Process with autoconf to generate configure script
dnl

AC_INIT([Liquid Fixed-Point Math Library],[0.1.0],[liquid@vt.edu],[liquidfpm])

dnl Autoheader
AC_CONFIG_HEADER(config.h)
AH_TOP([
#ifndef __LIQUIDFPM_CONFIG_H__
#define __LIQUIDFPM_CONFIG_H__
])
AH_BOTTOM([
#endif // __LIQUIDFPM_CONFIG_H__
])

dnl Configure options

AC_ARG_ENABLE(debug,
    AS_HELP_STRING([--enable-debug],[debug]),
    [DEBUG_OPTION="-DDEBUG"],
    [DEBUG_OPTION=""]
)

dnl Check for necessary programs

dnl Check for necessary libraries
#AC_CHECK_LIB(c, malloc)
#AC_CHECK_LIB(m, sinf)

dnl Check for necessary header files
AC_CHECK_HEADERS(stdio.h stdlib.h)
if test -z "$HAVE_stdio.h"
then
    AC_MSG_ERROR([Need stdio.h!])
fi

dnl Check for necessary library functions
dnl AC_CHECK_FUNCS(memset memcpy memmove)

dnl Check size of certain variables
AC_CHECK_SIZEOF(int)
dnl AC_CHECK_SIZEOF(unsigned int)

dnl Check canonical system
AC_CANONICAL_SYSTEM
case $target_cpu in
i386|i486|i586|i686)
    ARCH_OPTION="-march=$target_cpu"
    FPM_OPTION="-DFPM_INTEL"
    MLIBS="q32_mul.x86.o"
    AC_DEFINE(FPM_INTEL, 1, [Intel])
    ;;
ppc|powerpc*)
    ARCH_OPTION="-fno-common -faltivec"
    FPM_OPTION="-DFPM_PPC"
    MLIBS="q32_mul.ppc.o"
    AC_DEFINE(FPM_PPC, 1, [Power PC])
    ;;
arm)
    FPM_OPTION="-DFPM_ARM"
    MLIBS="q32_mul.port.o"
    AC_DEFINE(FPM_ARM, 1, [ARM])
    ;;
mips)
    fpm_optiON="-DFPM_MIPS"
    MLIBS="q32_mul.port.o"
    AC_DEFINE(FPM_MIPS, 1, [MIPS])
    ;;
sparc)
    FPM_OPTION="-DFPM_SPARC"
    MLIBS="q32_mul.port.o"
    AC_DEFINE(FPM_SPARC, 1, [SPARC])
    ;;
64bit)
    FPM_OPTION="-DFPM_64BIT"
    MLIBS="q32_mul.port.o"
    AC_DEFINE(FPM_64BIT, 1, [64-bit])
    ;;
*)
    FPM_OPTION="-DFPM_DEFAULT"
    MLIBS="q32_mul.port.o"
    AC_DEFINE(FPM_DEFAULT, 1, [Default])
    ;;
esac

case $target_os in
darwin*)
    SH_LIB=libliquidfpm.dylib
    REBIND=""
    ;;
*)
    SH_LIB=libliquidfpm.so
    REBIND=ldconfig
    ;;
esac
AC_SUBST(SH_LIB)
AC_SUBST(REBIND)
AC_SUBST(ARCH_OPTION)

dnl MLIBS defined the additional architecture-specific library objects to
dnl build.
AC_SUBST(MLIBS)

AC_SUBST(DEBUG_OPTION)
AC_SUBST(FPM_OPTION)

AC_OUTPUT(makefile)
